force-app/main/default/objects/Apttus_Config2__CustomerPOIssueLog__c/Apttus_Config2__CustomerPOIssueLog__c.object-meta.xml
<CustomObject>
    <description>Represents an issue found when validating purchase order data</description>
    <label>Customer PO Issue Log</label>
    <nameField>
        <displayFormat>Log-{00000000}</displayFormat>
        <label>Issue Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer PO Issue Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>