force-app/main/default/objects/Apttus_Config2__CustomerPOIssueLog__c/fields/Apttus_Config2__ContextField__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ContextField__c</fullName>
    <description>The API name of the field from purchase order header or the purchase order item for which the issue is logged</description>
    <inlineHelpText>The API name of the field from purchase order header or the purchase order item for which the issue is logged</inlineHelpText>
    <label>Context Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>