force-app/main/default/objects/Apttus_Config2__CustomerPOIssueLog__c/fields/Apttus_Config2__CustomerPOItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CustomerPOItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID Of the associated purchase order item</description>
    <inlineHelpText>ID Of the associated purchase order item</inlineHelpText>
    <label>Purchase Order Item</label>
    <referenceTo>Apttus_Config2__CustomerPOItem__c</referenceTo>
    <relationshipLabel>Customer PO Issue Logs</relationshipLabel>
    <relationshipName>CustomerPOIssueLogs</relationshipName>
    <type>Lookup</type>
</CustomField>