force-app/main/default/objects/Apttus_Config2__CustomerPOIssueLog__c/fields/Apttus_Config2__CustomerPurchaseOrderId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CustomerPurchaseOrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated purchase order</description>
    <inlineHelpText>ID of the associated purchase order</inlineHelpText>
    <label>Purchase Order</label>
    <referenceTo>Apttus_Config2__CustomerPurchaseOrder__c</referenceTo>
    <relationshipLabel>Customer PO Issue Logs</relationshipLabel>
    <relationshipName>CustomerPOIssueLogs</relationshipName>
    <type>Lookup</type>
</CustomField>