force-app/main/default/objects/Apttus_Config2__CustomerPOIssueLog__c/fields/Apttus_Config2__EnrichmentRuleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnrichmentRuleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated data enrichment rule</description>
    <inlineHelpText>ID of the associated data enrichment rule</inlineHelpText>
    <label>Enrichment Rule</label>
    <referenceTo>Apttus_Config2__DataEnrichmentRule__c</referenceTo>
    <relationshipLabel>Issue Logs</relationshipLabel>
    <relationshipName>IssueLogs</relationshipName>
    <type>Lookup</type>
</CustomField>