force-app/main/default/objects/Apttus_Config2__CustomerPOIssueLog__c/fields/Apttus_Config2__ErrorType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ErrorType__c</fullName>
    <description>The type of issue logged when validation fails. Error will mean that issue needs to be resolved before next process step</description>
    <inlineHelpText>The type of issue logged when validation fails. Error will mean that issue needs to be resolved before next process step</inlineHelpText>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>