force-app/main/default/objects/Apttus_Config2__CustomerPOIssueLog__c/fields/Apttus_Config2__IssueDetails__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IssueDetails__c</fullName>
    <description>The details of the issue</description>
    <inlineHelpText>The details of the issue</inlineHelpText>
    <label>Issue Details (Deprecated)</label>
    <type>TextArea</type>
</CustomField>