force-app/main/default/objects/Apttus_Config2__CustomerPOIssueLog__c/fields/Apttus_Config2__Resolution__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Resolution__c</fullName>
    <description>Holds information about the final resolution of the issue</description>
    <inlineHelpText>Holds information about the final resolution of the issue</inlineHelpText>
    <label>Resolution</label>
    <type>TextArea</type>
</CustomField>