force-app/main/default/objects/Apttus_Config2__CustomerPOIssueLog__c/fields/Apttus_Config2__ResolutionDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ResolutionDate__c</fullName>
    <description>The DateTime when the issue was resolved</description>
    <inlineHelpText>The DateTime when the issue was resolved</inlineHelpText>
    <label>Resolution Date</label>
    <type>DateTime</type>
</CustomField>