force-app/main/default/objects/Apttus_Config2__CustomerPOIssueLog__c/fields/Apttus_Config2__RulesetId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RulesetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated data enrichment/validation rule set</description>
    <inlineHelpText>ID of the associated data enrichment/validation rule set</inlineHelpText>
    <label>Ruleset</label>
    <referenceTo>Apttus_Config2__DataValidationEnrichmentRuleset__c</referenceTo>
    <relationshipLabel>Issue Logs</relationshipLabel>
    <relationshipName>IssueLogs</relationshipName>
    <type>Lookup</type>
</CustomField>