force-app/main/default/objects/Apttus_Config2__CustomerPOIssueLog__c/fields/Apttus_Config2__ValidationRuleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ValidationRuleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated data validation rule</description>
    <inlineHelpText>ID of the associated data validation rule</inlineHelpText>
    <label>Validation Rule</label>
    <referenceTo>Apttus_Config2__DataValidationRule__c</referenceTo>
    <relationshipLabel>Issue Logs</relationshipLabel>
    <relationshipName>IssueLogs</relationshipName>
    <type>Lookup</type>
</CustomField>